ncc/testsuite/negative/namespace-b231.n
using Nemerle.Colections;  // E: referenced namespace .* does not exist
using NON = Nonexitant.Class; // E: referenced namespace .* does not exist

using Syyyyyyyyyyyyystem; // E: referenced namespace .* does not exist

namespace Foo { }

public module Program
{
    Main() : void
    {
      def d : DateTime = 1; // E: unbound type name `DateTime'
    }
    
    bar () : void {
        _ = Foo ();   // E: the meaning of .* does not allow this operation
        
    }
}

class A { }
